--- a/recetas/lasaña.html
+++ b/recetas/lasaña.html
@@ -7,6 +7,33 @@
 <body>
     
     <h1>Receta de lasaña</h1>
+    <img href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.annarecetasfaciles.com%2Flasana-de-carne-y-queso-facil-y-riquisima.html&psig=AOvVaw2iFHG_8Rr_hKBXEdIkdsWz&ust=1699734567983000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCOC2tuuiuoIDFQAAAAAdAAAAABAE">
+    <h2>Descripción</h2>
+    <p>La mejor receta de Lasaña con carne y bechamel</p>
+    <h2>Ingredientes</h2>
+    <ul>
+        <li>Carne picada de ternera: <strong>300g</strong></li>
+        <li>Carne picada de cerdo: <strong>200g</strong></li>
+        <li>Bacon en lonchas: <strong>2</strong></li>
+        <li>Zanahoria: <strong>2</strong></li>
+        <li>Pimiento verde: <strong>1</strong></li>
+        <li>Cebolla: <strong>1</strong></li>
+        <li>Diente de ajo: <strong>1</strong></li>
+        <li>Setas: <strong>150g</strong></li>
+        <li>Calabacín: <strong>0.5</strong></li>
+        <li>Vino tinto: <strong>50ml</strong></li>
+        <li>Sal</li>
+        <li>Aceite de oliva virgen extra</li>
+        <li>Albahaca</li>
+        <li>Orégano seco</li>
+        <li>Salsa de tomate</li>
+        <li>Láminas de pasta para lasaña</li>
+        <li>Queso rallado</li>
+        <li>Leche entera: <strong>600ml</strong></li>
+        <li>Haria de trigo: <strong>60g</strong></li>
+        <li>Mantequilla: <strong>30g</li>
+        <li>Nuez moscada molida</li>
+    </ul>
 
 </body>
 </html>
