--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <body>
     
     <h1>Odin recipes</h1>
-    <a href="recetas/lasaña.html">Receta de Lasaña</a>
+    <ul>
+        <li><a href="recetas/lasaña.html">Receta de Lasaña</a></li>
+        <li><a href="recetas/panqueques.html">Receta de Panqueques</a></li>
+        <li><a href="recetas/">Receta de Tortilla de patatas con cebolla</a></li>
+    </ul>
+    
 
 </body>
 </html>
