--- a/recetas/lasaña.html
+++ b/recetas/lasaña.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Lasaña</title>
 </head>
 <body>
     
