Finalizada receta Tortilla + agregada img

--- a/recetas/tortilla.html
+++ b/recetas/tortilla.html
@@ -5,6 +5,33 @@
     <title>Tortilla</title>
 </head>
 <body>
-    
+    <h1>Receta de Tortilla de patata con cebolla</h1>
+    <img src="../img/tortilla.jpg" alt="Imagen tortilla patata en plato">
+    <h2>Descripción</h2>
+    <p>Quizás la receta de la tortilla de patata sea una de las primeras que todo aspirante a cocinillas debería aprender a hacer, una de las comidas más típicas españolas, y nos hemos propuesto que los que estén empezando en la cocina con nosotros, puedan preparar esta receta de tortilla de patatas con cebolla, con un sabor excepciona</p>
+    <p>Para ello, vamos a hacer esta tortilla de patatas con dos toques especiales ya que las patatas las vamos a cocinar partiendo de aceite en frío para conseguir un confitado que las haga más cremosas y la cebolla la vamos a caramelizar y añadir después a las patatas. Si preparáis la receta tal como la contamos a continuación, el éxito estará garantizado.</p>
+    <p>Puedes aplicar trucos como el de la tortilla de patatas de Arguiñano o dejarla más jugosa a tu gusto, incluso puedes aprovechar algún robot de cocina como en nuestra receta de tortilla con Thermomix, aunque lo mejor es aprender a cocinarla sin más con una sartén.</p>
+    <h2>Ingredientes</h2>
+    <ul>
+        <li>Patatas: <strong>700g</strong></li>
+        <li>Cebolla: <strong>300g</strong></li>
+        <li>Huevos: <strong>6</strong></li>
+        <li>Sal</li>
+        <li>Aceite de oliva</li>
+    </ul>
+    <h2>Preparación de la tortilla de patatas</h2>
+    <ol>
+        <li>Pelamos las patatas, las lavamos para quitar restos de suciedad y muy importante, las secamos. Cortamos en láminas semifinas, a mí no me gusta que se deshagan sino que al freírlas se tuesten un poco. Las colocamos en un bol grande, donde luego vamos a mezclar con el huevo y añadimos sal al gusto. Removemos bien y reservamos.</li>
+        <li>Elegimos nuestra sartén más grande y antiadherente. La ponemos al fuego y añadimos un buen aceite de oliva virgen extra. No tengáis miedo en gastaros un poco de dinero en aceite, le va a dar ese punto de sabor que distingue vuestra tortilla de las demás, podéis emplear muchas variedades: arbequina, picual, cornicabra, hojiblanca, royal… el que más os guste, pero de calidad.</li>
+        <li>Introducimos las patatas cortadas y ya saladas y dejamos que se cocinen durante aproximadamente de veinte a treinta minutos a fuego bajo. El tema del grosor de las patatas también va a gustos. Hay quien prefiere cortarlas a trozos muy pequeños, en láminas muy finas que casi se rompan al freír o más bien grandes.</li>
+        <li>Mientras se están friendo las patatas, en el bol donde luego vamos a echar las patatas batimos los huevos, reservamos. Pelamos la cebolla y cortamos lo más fino posible.</li>
+        <li>En otra sartén calentamos aceite de oliva y añadimos los trozos de cebolla. Pochamos hasta que tenga un color dorado, que tenga un punto de caramelización pero sin llegar a quemarse. La cebolla se hará antes que las patatas, así que escurrimos y añadimos al bol con el huevo batido. Quitamos con una espumadera de la sartén, dejando las patatas con el menor resto de aceite posible, bien escurridas. Si no queremos nada de aceite extra podemos emplear un colador grande. Las dejamos escurrir y luego las introducimos al bol con la cebolla y el huevo.</li>
+    </ol>
+    <h2>Cuajar la tortilla de patatas con cebolla</h2>
+    <ol>
+        <li>Reposamos la futura tortilla durante 15 minutos para que se junten bien todos los sabores. Pasados esos minutos esta mezcla ya está deliciosa, probad a tostar un poco de pan y añadidle una capita con esta mezcla, increíble.</li>
+        <li>En la misma sartén en la que hemos frito las patatas y una vez retirado el aceite. Cocinamos la mezcla que tenemos en reposo. A mí me gusta poco hecha, que al partirla con el tenedor salga un poco de huevo líquido. Para este tipo de tortilla sólo necesitamos 4 minutos a fuego medio-alto por cada lado. Depende de lo cuajada que queramos que quede la tortilla.</li>
+        <li>Para darle la vuelta yo empleo un plato llano grande que tengo para las ensaladas. Pero se puede usar una tapadera de borde liso, incluso ahora he visto que venden tapaderas especiales para dar la vuelta a la tortilla. Emplead el método más cómodo y que más fácil os sea para que no se os desparrame, con cuidado. No desesperéis si no os sale, en ese caso tendréis una tortilla más cuajada, pero igual de rica.</li>
+    </ol>
 </body>
 </html>
