--- a/recetas/lasaña.html
+++ b/recetas/lasaña.html
@@ -7,7 +7,7 @@
 <body>
     
     <h1>Receta de lasaña</h1>
-    <img href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.annarecetasfaciles.com%2Flasana-de-carne-y-queso-facil-y-riquisima.html&psig=AOvVaw2iFHG_8Rr_hKBXEdIkdsWz&ust=1699734567983000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCOC2tuuiuoIDFQAAAAAdAAAAABAE">
+    <img src="../img/lasaña.jpg" alt="Plato de Lasaña">
     <h2>Descripción</h2>
     <p>La mejor receta de Lasaña con carne y bechamel</p>
     <h2>Ingredientes</h2>
