Agregada receta Panqueques

--- a/recetas/panqueques.html
+++ b/recetas/panqueques.html
@@ -5,6 +5,25 @@
     <title>Panquques</title>
 </head>
 <body>
-    
+    <h1>Receta de Panqueques</h1>
+    <img src="../img/panqueque.jpg" alt="Imagen de Panqueque emplatado">
+    <p>Los panqueques súper fáciles de hacer son una receta para principiantes. Conocidos también como tortitas americanas, hotcakes, pancakes o panquecas, los panqueques son una delicia que se puede comer con dulce o con salado a cualquier hora del día. De esta forma, si te preguntas cómo preparar panqueques la respuesta es sencilla, ¡con lo que quieras!</p>
+    <p>Los panqueques caseros son una excelente opción para preparar todo tipo de platos, ya que sirven para hacer canelones, para elaborar tartas o para comerlos con un poco de miel. Aprende cómo hacer panqueques caseros en menos de lo que piensas con RecetasGratis y disfruta de un plato sencillo y delicioso.</p>
+    <h2>Ingredientes</h2>
+    <ul>
+        <li>Harina leudante o harina de reposteria: <strong>1 taza</strong></li>
+        <li>Huevos: <strong>1</strong></li>
+        <li>Aceite de oliva: <strong>1 chorro</strong></li>
+        <li>Leche: <strong>180ml</strong></li>
+    </ul>
+    <h2>Pasos a seguir</h2>
+    <ol>
+        <li>Hacer la receta de panqueques es súper fácil. Primero, reúne todos los ingredientes. Si no tienes harina leudante o preparada, que es harina de trigo que ya incluye levadura (también se llama harina de repostería), puedes usar harina de trigo normal y añadir una cucharadita de levadura química en polvo (polvo de hornear).</li>
+        <li>Coloca la harina en un bol y añade el huevo y la leche. Mezcla bien hasta que se integren estos ingredientes y no queden casi grumos.</li>
+        <li>Para terminar de hacer la masa de los panqueques caseros, agrega un chorrito de aceite y mezcla bien. Verás que el aceite hace que se terminen de disolver los grumos de harina y quede una masa lisa y homogénea.</li>
+        <li>Para hacer los panqueques, calienta una sartén a fuego medio-bajo con un poquito de aceite o mantequilla. Cuando la sartén esté caliente, añade una cucharada de mezcla y déjala al fuego hasta que empiecen a salir burbujas en la superficie, entonces dale la vuelta y cocina por el otro lado.</li>
+        <li>Para servir la receta de panqueques súper fáciles de hacer, añade un poquito de mantequilla y miel y a disfrutar. Si quieres comerlos con algo salado, puedes servirlos con bacon y huevos fritos o un revuelto con jamón.</li>
+        <li>Si quieres descubrir una forma todavía más sencilla de hacer panqueques caseros, no te pierdas este vídeo en el que te mostramos cómo se hacen los panqueques con una botella.</li>
+    </ol>
 </body>
 </html>
