--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="recetas/lasaña.html">Receta de Lasaña</a></li>
         <li><a href="recetas/panqueques.html">Receta de Panqueques</a></li>
-        <li><a href="recetas/">Receta de Tortilla de patatas con cebolla</a></li>
+        <li><a href="recetas/tortilla.html">Receta de Tortilla de patatas con cebolla</a></li>
     </ul>
     
 
