Tamaño de img en lasaña reducido y bug fix
El bug fix era un strong sin cerrar que mostraba
todo el resto del codigo en negrita

--- a/recetas/lasaña.html
+++ b/recetas/lasaña.html
@@ -7,7 +7,7 @@
 <body>
     
     <h1>Receta de lasaña</h1>
-    <img src="../img/lasaña.jpg" alt="Plato de Lasaña">
+    <img src="../img/lasaña.jpg" alt="Plato de Lasaña" width="500px" height="300px">
     <h2>Descripción</h2>
     <p>La mejor receta de Lasaña con carne y bechamel</p>
     <h2>Ingredientes</h2>
@@ -31,7 +31,7 @@
         <li>Queso rallado</li>
         <li>Leche entera: <strong>600ml</strong></li>
         <li>Haria de trigo: <strong>60g</strong></li>
-        <li>Mantequilla: <strong>30g</li>
+        <li>Mantequilla: <strong>30g</strong></li>
         <li>Nuez moscada molida</li>
     </ul>
     <h2>Preparación de la lasaña de carne</h2>
