Agregado css al sitio web
He agregado css, añadiendo color de fondo a todas las páginas además de tipos de letra y alineación de objetos.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="bgcolor">
     
-    <h1>Odin recipes</h1>
-    <ul>
+    <h1 class="align">Odin recipes</h1>
+    <ul class="align">
         <li><a href="recetas/lasaña.html">Receta de Lasaña</a></li>
         <li><a href="recetas/panqueques.html">Receta de Panqueques</a></li>
         <li><a href="recetas/tortilla.html">Receta de Tortilla de patatas con cebolla</a></li>
