--- a/recetas/lasaña.html
+++ b/recetas/lasaña.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Lasaña</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="bgcolor">
     
     <h1>Receta de lasaña</h1>
+    <div class="center">
     <img src="../img/lasaña.jpg" alt="Plato de Lasaña" width="500px" height="300px">
-    <h2>Descripción</h2>
-    <p>La mejor receta de Lasaña con carne y bechamel</p>
+    </div>
+    <h2 class="center">Descripción</h2>
+    <p class="center">La mejor receta de Lasaña con carne y bechamel</p>
     <h2>Ingredientes</h2>
     <ul>
         <li>Carne picada de ternera: <strong>300g</strong></li>
