--- a/recetas/panqueques.html
+++ b/recetas/panqueques.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Panquques</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="bgcolor">
     <h1>Receta de Panqueques</h1>
+    <div class="center">
     <img src="../img/panqueque.jpg" alt="Imagen de Panqueque emplatado">
+    </div>
     <p>Los panqueques súper fáciles de hacer son una receta para principiantes. Conocidos también como tortitas americanas, hotcakes, pancakes o panquecas, los panqueques son una delicia que se puede comer con dulce o con salado a cualquier hora del día. De esta forma, si te preguntas cómo preparar panqueques la respuesta es sencilla, ¡con lo que quieras!</p>
     <p>Los panqueques caseros son una excelente opción para preparar todo tipo de platos, ya que sirven para hacer canelones, para elaborar tartas o para comerlos con un poco de miel. Aprende cómo hacer panqueques caseros en menos de lo que piensas con RecetasGratis y disfruta de un plato sencillo y delicioso.</p>
     <h2>Ingredientes</h2>
