--- a/recetas/tortilla.html
+++ b/recetas/tortilla.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Tortilla</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="bgcolor">
     <h1>Receta de Tortilla de patata con cebolla</h1>
+    <div class="center">
     <img src="../img/tortilla.jpg" alt="Imagen tortilla patata en plato">
+    </div>
     <h2>Descripción</h2>
     <p>Quizás la receta de la tortilla de patata sea una de las primeras que todo aspirante a cocinillas debería aprender a hacer, una de las comidas más típicas españolas, y nos hemos propuesto que los que estén empezando en la cocina con nosotros, puedan preparar esta receta de tortilla de patatas con cebolla, con un sabor excepciona</p>
     <p>Para ello, vamos a hacer esta tortilla de patatas con dos toques especiales ya que las patatas las vamos a cocinar partiendo de aceite en frío para conseguir un confitado que las haga más cremosas y la cebolla la vamos a caramelizar y añadir después a las patatas. Si preparáis la receta tal como la contamos a continuación, el éxito estará garantizado.</p>
